--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.9.0",
     "framer-motion": "^12.12.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "react-vertical-timeline-component": "^3.5.3",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
