--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-frontend",
   "private": true,
-  "homepage": "https://Sidddev15.github.io/portfolio-frontend",
+  "homepage": "https://sidddev15.github.io/portfolio-frontend",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
